made it blue and fixed the letter spacing

--- a/impressme/css/impress-demo.css
+++ b/impressme/css/impress-demo.css
@@ -67,13 +67,13 @@ body {
     font-family: 'Ubuntu Condensed', sans-serif;
     min-height: 740px;
 	color:white;
-    background: rgb(173, 124, 80);
-    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(173, 124, 80)), to(rgb(134,96,60)));
-    background: -webkit-radial-gradient(rgb(173, 124, 80), rgb(134,96,60));
-    background:    -moz-radial-gradient(rgb(173, 124, 80), rgb(134,96,60));
-    background:     -ms-radial-gradient(rgb(173, 124, 80), rgb(134,96,60));
-    background:      -o-radial-gradient(rgb(173, 124, 80), rgb(134,96,60));
-    background:         radial-gradient(rgb(173, 124, 80), rgb(134,96,60));    
+    background: rgb(70, 80, 115);
+    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(70, 80, 115)), to(rgb(52,64,89)));
+    background: -webkit-radial-gradient(rgb(70, 80, 115), rgb(52,64,89));
+    background:    -moz-radial-gradient(rgb(70, 80, 115), rgb(52,64,89));
+    background:     -ms-radial-gradient(rgb(70, 80, 115), rgb(52,64,89));
+    background:      -o-radial-gradient(rgb(70, 80, 115), rgb(52,64,89));
+    background:         radial-gradient(rgb(70, 80, 115), rgb(52,64,89));    
 	/*background: #AD7C50;*/
 
 }
@@ -240,7 +240,7 @@ a:focus {
 	color:white;
 	font-family: 'Ubuntu Condensed', sans-serif;
 	font-size:100px;
-	letter-spacing:-.1em;
+	letter-spacing:-.06em;
 }
 
 .underbelly ul, .answer ul{
